--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,9 @@
     "ghcr.io/devcontainers/features/node:1": {},
     "ghcr.io/devcontainers-contrib/features/devcontainers-cli:1": {},
     "ghcr.io/devcontainers/features/docker-in-docker:2": {},
-    "ghcr.io/marcozac/devcontainer-features/shellcheck:1": {}
+    "ghcr.io/marcozac/devcontainer-features/shellcheck:1": {},
+    "ghcr.io/harrhp/devcontainer-features/aliae:1": {},
+    "ghcr.io/harrhp/devcontainer-features/oh-my-posh:1": {}
   },
   "customizations": {
     "vscode": {
